crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-4.stderr
TOML parse error at line 1, column 27
  |
1 | bad-uni-esc-4 = "val\U0000"
  |                           ^
too few unicode value digits, expected unicode hexadecimal value
